# python-earlier-projs

./: README.md
PCAD/: pyproject.toml  requirement.txt
PCAD/basics/: decorator_1.py  functions_first_class_1.py  inner_class_1.py  matrix_ops1.py  test1_itertools.ipynb  tuple_list_1.py
PCAD/basics/intermediate_python/: lists.ipynb
PCAD/data/: movie_scores_cleaned.csv  tips_new.csv
PCAD/database_ops/mongodb/products/: appmongodb.py  products_ops.py
PCAD/database_ops/mysqls/: __init__.py  mysql_db_ops_1.py
PCAD/database_ops/notes/: some_extra_reading.md
PCAD/database_ops/scipts/: create_dbuser.sql  dept_data_dump.sql  dept_manager_data_dump.sql  mysql_db_tables_script.sql  salaries_1_dump.sql  test_db_script.sql
PCAD/database_ops/sqllites/: sql_lite_1.ipynb  sqllite_ops.ipynb
PCAD/database_ops/sqllites/dbops/: db_ops_1.py  movies_db.db
PCAD/from_learn/numpy_pandas/from_course_demos/: Matplotlib_Complete_r0atr.ipynb  Numpy_Pandas_t7i9x.ipynb
PCAD/kaggle_data_pra/: __init__.py  kaggle_start.py  test1.ipynb  test2.ipynb
PCAD/numpy_pandas/data_sci_course/numpy/: 00-NumPy-Arrays.ipynb
PCAD/numpy_pandas/data_sci_course/pandas/: 09-Inputs-and-Outputs.ipynb
PCAD/numpy_pandas/pced_data_analysis_cisco_course/data/: volcano_list.csv
PCAD/oops/: Display.py  callit.py  models.py  rectangle.py
PCAD/statistics_and_stat_tests/: all_statistical_tests.ipynb  statistics_std_lib-1.ipynb
PCAD/web_scapping/: web_scap_1.py
web/fast-web/fast-proj1/: Dockerfile  fast_api_notes_1.md  pyproject.toml  requirements.txt
web/fast-web/fast-proj1/app/: __init__.py  (+2 more)
(+156 files in other folders)
